Small style fixes